--- a/RockBrainzProject/www/index.html
+++ b/RockBrainzProject/www/index.html
@@ -25,15 +25,8 @@
             </div>
           </div>
           <table class="table">
-            <thead>
-              <tr>
-                <th scope="col">Nombre</th>
-                <th scope="col">Autor</th>
-              </tr>
-            </thead>
-            <tbody id="results">
-
-            </tbody>
+            <thead></thead>
+            <tbody id="results"></tbody>
           </table>
         </div>
       </div>
