--- a/RockBrainzProject/platforms/browser/www/index.html
+++ b/RockBrainzProject/platforms/browser/www/index.html
@@ -17,20 +17,20 @@
     <div class="container-fluid">
       <div class="row justify-content-md-center">
         <div class="col-md-8">
-          <h2>Busca tu canción</h2>
+          <h2>RockBrainz</h2>
           <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Título de la canción" aria-label="Título de la canción" id="group" aria-describedby="btnSearchSong">
-            <div class="input-group-append">
-              <button class="btn btn-outline-secondary" type="button" id="btnSearchSong"><i class="fas fa-search"></i></button>
+            <input type="text" class="form-control" placeholder="Search by..." aria-label="Search by..." id="group" aria-describedby="btnSearchSong">
+            <div class="input-group-prepend">
+              <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Buscar por</button>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="#" id="artists">Artist</a>
+                <a class="dropdown-item" href="#" id="recordings">Recording</a>
+              </div>
             </div>
           </div>
           <table class="table">
-            <thead>
-              
-            </thead>
-            <tbody id="results">
-
-            </tbody>
+            <thead></thead>
+            <tbody id="results"></tbody>
           </table>
         </div>
       </div>
